--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 a {
-  font-size: 18px;
+  font-size: 20px;
   font-weight: 600;
   font-family: "Roboto Condensed", sans-serif;
   color: indianred;
@@ -15,7 +15,7 @@ h1 {
 
 h3 {
   font-family: "Roboto Condensed", sans-serif;
-  font-size: 18px;
+  font-size: 20px;
   font-weight: 20;
   padding: 20px;
 }
@@ -24,6 +24,7 @@ h3 {
   position: relative;
   left: 40px;
   top: 20px;
+  overflow-x: scroll;
 }
 
 .text-container {
