--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,8 @@ h1 {
   text-align: center;
   font-weight: 100;
   font-family: monospace;
-  padding-top: 40px;
+  padding-top: 60px;
+  letter-spacing: 10px;
 }
 
 h3 {
