--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,10 @@
+html,
+body {
+  max-width: 100vw;
+  max-height: 100vh;
+  overflow-x: hidden;
+}
+
 a {
   font-size: 20px;
   font-weight: 600;
@@ -10,7 +17,7 @@ h1 {
   text-align: center;
   font-weight: 100;
   font-family: monospace;
-  padding-top: 60px;
+  padding-top: 30px;
   letter-spacing: 10px;
 }
 
@@ -18,14 +25,13 @@ h3 {
   font-family: "Roboto Condensed", sans-serif;
   font-size: 20px;
   font-weight: 20;
-  padding: 20px;
+  margin: 20px;
 }
 
 .container {
   position: relative;
-  left: 40px;
+  left: 10%;
   top: 20px;
-  overflow-x: scroll;
 }
 
 .text-container {
@@ -35,7 +41,22 @@ h3 {
 }
 
 img {
-  padding-top: 40px;
+  padding-top: 20px;
   padding-left: 40px;
+  padding-bottom: 40px;
   float: left;
+}
+
+footer {
+  position: fixed;
+  font-size: 14px;
+  padding: 3px;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: white;
+  color: grey;
+  text-align: center;
+  font-family: "Roboto Condensed", sans-serif;
+  letter-spacing: 20px;
 }
