--- a/css/main.css
+++ b/css/main.css
@@ -1,23 +1,22 @@
-html,
+/* html,
 body {
   max-width: 100vw;
   max-height: 100vh;
   overflow-x: hidden;
-}
+} */
 
 a {
   font-size: 20px;
   font-weight: 600;
   font-family: "Roboto Condensed", sans-serif;
   color: indianred;
-  padding-top: 20px;
 }
 
 h1 {
   text-align: center;
   font-weight: 100;
   font-family: monospace;
-  padding-top: 30px;
+  padding: 30px;
   letter-spacing: 10px;
 }
 
@@ -25,27 +24,45 @@ h3 {
   font-family: "Roboto Condensed", sans-serif;
   font-size: 20px;
   font-weight: 20;
-  margin: 20px;
 }
 
 /* for home page images */
 .container {
-  position: relative;
-  left: 10%;
-  top: 20px;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -ms-flex-line-pack: center;
+  align-content: center;
+  display: grid;
+  grid-template-columns: 20px 450px 450px 450px 20px;
+  grid-template-rows: 600px 600px 60px;
+  justify-items: center;
+  grid-row-gap: 20px;
 }
 
-.text-container {
-  position: relative;
-  left: 100px;
-  top: 150px;
+.item-1 {
+  grid-column: 2;
+}
+.item-2 {
+  grid-column: 3;
+}
+.item-3 {
+  grid-column: 4;
 }
 
-img {
-  padding-top: 20px;
-  padding-left: 40px;
-  padding-bottom: 40px;
-  float: left;
+.item-4 {
+  grid-column: 2;
+  grid-row: 2;
+}
+
+.item-5 {
+  grid-column: 3;
+  grid-row: 2;
+}
+
+.item-6 {
+  grid-column: 4;
+  grid-row: 2;
 }
 
 .container img:hover {
@@ -66,8 +83,103 @@ footer {
   letter-spacing: 20px;
 }
 
-.img-container {
-  float: left;
-  padding-left: 10%;
-  padding-top: 100px;
+/* individual pages style */
+.detail-container {
+  display: grid;
+  grid-template-columns: 20% 450px 40%;
+  grid-template-rows: 200px auto;
 }
+
+.img-container {
+  grid-column: 2;
+}
+
+.text-container {
+  grid-column: 3;
+  grid-row: 2;
+  align-self: center;
+}
+
+/* Responsive for iPhone X
+/* Portrait and Landscape */
+/* @media only screen and (min-width: 375px) and (max-width: 812px) and (-webkit-min-pixel-ratio: 3) {
+  .detail-container {
+    display: grid;
+    grid-template-columns: auto 350px auto;
+    grid-template-rows: auto auto;
+  }
+
+  .img-container {
+    grid-column: 2;
+  }
+
+  .text-container {
+    grid-column: 2;
+    grid-row: 2;
+    align-self: center;
+    text-align: center;
+  }
+}
+
+/* Portrait */
+/* @media only screen and (min-width: 375px) and (max-width: 812px) and (-webkit-min-pixel-ratio: 3) and (orientation: portrait) {
+  .detail-container {
+    display: grid;
+    grid-template-columns: 0 5% auto;
+    grid-template-rows: 200px auto;
+    overflow: hidden;
+  }
+
+  .img-container {
+    grid-column: 3;
+  }
+
+  .text-container {
+    grid-column: 1;
+    grid-row: 3;
+    align-self: center;
+  }
+
+  .container {
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -ms-flex-line-pack: center;
+    align-content: center;
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: 600px 600px 60px;
+    justify-items: center;
+    grid-row-gap: 20px;
+  }
+  .item-1 {
+    grid-column: 1;
+    grid-row: 1;
+  }
+  .item-2 {
+    grid-row: 2;
+  }
+  .item-3 {
+    grid-column: 1;
+    grid-row: 3;
+  }
+
+  .item-4 {
+    grid-column: 1;
+    grid-row: 3;
+  }
+
+  .item-5 {
+    grid-column: 1;
+    grid-row: 4;
+  }
+
+  .item-6 {
+    grid-column: 1;
+    grid-row: 5;
+  }
+}
+
+/* Landscape 
+@media only screen and (min-width: 375px) and (max-width: 812px) and (-webkit-min-pixel-ratio: 3) and (orientation: landscape) {
+} */
