--- a/css/main.css
+++ b/css/main.css
@@ -34,10 +34,11 @@ h3 {
   -ms-flex-line-pack: center;
   align-content: center;
   display: grid;
-  grid-template-columns: 20px 450px 450px 450px 20px;
-  grid-template-rows: 600px 600px 60px;
+  /* grid-template-columns: 20px 450px 450px 450px 20px;
+  grid-template-rows: 600px 600px 60px; */
+  grid-template-columns: repeat(auto-fit, minmax(450px));
   justify-items: center;
-  grid-row-gap: 20px;
+  grid-gap: 20px;
 }
 
 .item-1 {
@@ -101,12 +102,28 @@ footer {
 }
 
 /* Responsive for iPhone X
-/* Portrait and Landscape */
-/* @media only screen and (min-width: 375px) and (max-width: 812px) and (-webkit-min-pixel-ratio: 3) {
+/* Portrait */
+@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: portrait) {
+  h1 {
+    text-align: center;
+    font-weight: 60;
+    font-family: monospace;
+    padding: 10px;
+    letter-spacing: 10px;
+  }
+  img {
+    width: 375px;
+    height: 500px;
+  }
+  h3,
+  a {
+    font-size: 18px;
+  }
   .detail-container {
     display: grid;
-    grid-template-columns: auto 350px auto;
+    grid-template-columns: 0 400px 0;
     grid-template-rows: auto auto;
+    overflow-x: hidden;
   }
 
   .img-container {
@@ -116,70 +133,13 @@ footer {
   .text-container {
     grid-column: 2;
     grid-row: 2;
-    align-self: center;
-    text-align: center;
-  }
-}
-
-/* Portrait */
-/* @media only screen and (min-width: 375px) and (max-width: 812px) and (-webkit-min-pixel-ratio: 3) and (orientation: portrait) {
-  .detail-container {
-    display: grid;
-    grid-template-columns: 0 5% auto;
-    grid-template-rows: 200px auto;
-    overflow: hidden;
-  }
-
-  .img-container {
-    grid-column: 3;
-  }
-
-  .text-container {
-    grid-column: 1;
-    grid-row: 3;
-    align-self: center;
   }
 
   .container {
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -ms-flex-line-pack: center;
-    align-content: center;
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: 600px 600px 60px;
-    justify-items: center;
-    grid-row-gap: 20px;
-  }
-  .item-1 {
-    grid-column: 1;
-    grid-row: 1;
-  }
-  .item-2 {
-    grid-row: 2;
-  }
-  .item-3 {
-    grid-column: 1;
-    grid-row: 3;
-  }
-
-  .item-4 {
-    grid-column: 1;
-    grid-row: 3;
-  }
-
-  .item-5 {
-    grid-column: 1;
-    grid-row: 4;
-  }
-
-  .item-6 {
-    grid-column: 1;
-    grid-row: 5;
-  }
+    display: block;
 }
 
-/* Landscape 
-@media only screen and (min-width: 375px) and (max-width: 812px) and (-webkit-min-pixel-ratio: 3) and (orientation: landscape) {
-} */
+/* Landscape */
+@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: landscape) {
+}
+}
