--- a/css/main.css
+++ b/css/main.css
@@ -137,9 +137,78 @@ footer {
 
   .container {
     display: block;
+    overflow-x: hidden;
+  }
 }
 
 /* Landscape */
-@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: landscape) {
-}
+@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape) {
+  h1 {
+    text-align: center;
+    font-size: 16px;
+    font-family: monospace;
+    padding: 2px;
+    letter-spacing: 10px;
+  }
+  img {
+    width: 200px;
+    height: 300px;
+  }
+
+  h3,
+  a {
+    font-size: 18px;
+  }
+  .detail-container {
+    display: inline-grid;
+    grid-template-columns: 80px 340px 350px;
+    grid-template-rows: auto;
+    overflow: hidden;
+  }
+
+  .img-container {
+    grid-column: 2;
+  }
+
+  .text-container {
+    grid-column: 3;
+    grid-row: 1;
+  }
+
+  .container {
+    display: inline-grid;
+    justify-items: center;
+    overflow-y: hidden;
+  }
+
+  footer {
+    display: none;
+  }
+
+  .item-1 {
+    grid-column: 2;
+    grid-row: 1;
+  }
+  .item-2 {
+    grid-column: 3;
+    grid-row: 1;
+  }
+  .item-3 {
+    grid-column: 4;
+    grid-row: 1;
+  }
+  .item-4 {
+    grid-column: 5;
+    grid-row: 1;
+  }
+
+  .item-5 {
+    grid-column: 6;
+    grid-row: 1;
+  }
+
+  .item-6 {
+    grid-column: 7;
+    grid-row: 1;
+  }
 }
