--- a/css/main.css
+++ b/css/main.css
@@ -106,9 +106,9 @@ footer {
 @media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: portrait) {
   h1 {
     text-align: center;
-    font-weight: 60;
+    font-size: 18px;
     font-family: monospace;
-    padding: 10px;
+    padding: 1px;
     letter-spacing: 10px;
   }
   img {
@@ -117,12 +117,15 @@ footer {
   }
   h3,
   a {
-    font-size: 18px;
+    font-size: 16px;
   }
   .detail-container {
     display: grid;
-    grid-template-columns: 0 400px 0;
+    grid-template-columns: 0 375px 0;
     grid-template-rows: auto auto;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
     overflow-x: hidden;
   }
 
